--- a/index/01-chap1.Rmd
+++ b/index/01-chap1.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 <!--
 This is for including Chapter 1.  Notice that it's also good practice to name your chunk.  This will help you debug potential issues as you knit.  The chunk above is called intro and the one below is called chapter1.  Feel free to change the name of the Rmd file as you wish, but don't forget to change it here from chap1.Rmd.
 -->
@@ -6,9 +11,50 @@ This is for including Chapter 1.  Notice that it's also good practice to name yo
 The {#rmd-basics} text after the chapter declaration will allow us to link throughout the document back to the beginning of Chapter 1.  These labels will automatically be generated (if not specified) by changing the spaces to hyphens and capital letters to lowercase.  Look for the reference to this label at the beginning of Chapter 2.
 -->
 
+# Introduction
+
+## Cardiovascular disease
+
+## Issues surrounding treatment of cardiovascular disease
+
+## Obesity: a modifiable risk factor for cardiovascular disease
+
+## Mechanisms of obesity related cardiovascular disease
+
+### Plasma proteome changes
+
+### Platelet function changes
+
+## Limitations of current epidemiological research
+
+## Mendelian randomization 
+
+## Basic science
+
+## Importance of an interdisciplinary approach
+
+## Thesis aims and objectives
+
+## Thesis structure
+
+## Publications from the PhD (in preparation or published)
+
+## Presentations from the PhD {#Presentations}
+
+Both
+
+**Platelet Society meeting**, 2018, Cambridge, UK. Title: Do the chemokines MDC and TARC to obesity related platelet hyperactivity and cardiovascular disease. Oral presentation.
+
+**IEU Scientific Advisory Board meeting**, 2020, Bristol, UK, Title: Effect of adiposity on the human plasma proteome: a Mendelian randomisation study using individual level data. Poster.
+
+**International Genetic Epidemiological Society meeting** 2020, Virtual conference, Title: Effects of body mass index on the human proteome: a Mendelian randomization study using individual level data. Selected for short talk as one of the top ranked posters.
+
+**International Society of Thrombosis and Haemostasis meeting** 2020, Virtual conference, Title: Effects of body mass index on the human plasma proteome – potential drivers of obesity-related cardiovascular disease? Poster. 
+
+
 # R Markdown Basics {#rmd-basics}
 
-Lucy's thesis
+
 Here is a brief introduction into using _R Markdown_. _Markdown_ is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. _R Markdown_ provides the flexibility of _Markdown_ with the implementation of **R** input and output.  For more details on using _R Markdown_ see <http://rmarkdown.rstudio.com>.  
 
 Be careful with your spacing in _Markdown_ documents.  While whitespace largely is ignored, it does at times give _Markdown_ signals as to how to proceed.  As a habit, try to keep everything left aligned whenever possible, especially as you type a new paragraph.  In other words, there is no need to indent basic text in the Rmd document (in fact, it might cause your text to do funny things if you do).
@@ -142,6 +188,7 @@ max_delays <- flights2 %>%
   group_by(carrier_name) %>%
   summarize(max_arr_delay = max(arr_delay, na.rm = TRUE))
 ```
+
 
 A useful function in the `knitr` package for making nice tables in _R Markdown_ is called `kable`.  It is much easier to use than manually entering values into a table by copying and pasting values into Excel or LaTeX.  This again goes to show how nice reproducible documents can be! (Note the use of `results="asis"`, which will produce the table instead of the code to create the table.)  The `caption.short` argument is used to include a shorter title to appear in the List of Tables.
 
