--- a/index/01-chap1.Rmd
+++ b/index/01-chap1.Rmd
@@ -10,7 +10,7 @@ This chapter will provide some background information to put the thesis into con
 # Background
 
 ## Obesity on the rise
-Obesity, defined as a body mass index (BMI) of greater than 30kg/m^2^, has tripled worldwide since 1975. It is currently estimated that 40% of adults in the United States and 26% of adults in the United Kingdom have obesity [@Bluher2019]. As of 2016, the number of individuals globally with obesity has surpassed 650 million [@TheLancetPublicHealth2018]. The average BMI of the UK adult population is ~27kg/m^2^ [@Wade2018], which is in the 'overweight' category (between 25 and 30 kg/m^2^). Overweight is also more common than 'normal-weight' in many other higher-income countries [@NCD-RisC2016], and prevalence of overweight is increasing in lower-income countries [@Templin2019].
+Obesity, defined as a body mass index (BMI) of greater than 30kg/m^2^, has tripled worldwide since 1975. It is currently estimated that 40% of adults in the United States and 26% of adults in the United Kingdom have obesity [@Bluher2019]. As of 2016, the number of individuals globally with obesity surpassed 650 million [@TheLancetPublicHealth2018]. The average BMI of the UK adult population is ~27kg/m^2^ [@Wade2018], which is in the 'overweight' category (between 25 and 30 kg/m^2^). Overweight is also more common than 'normal-weight' in many other higher-income countries [@NCD-RisC2016], and prevalence of overweight is increasing in lower-income countries [@Templin2019].
 
 BMI is generally used as a proxy for adiposity as there are high correlations between BMI and objective measures of fat mass measured by dual-energy X-ray absorptiometry (DXA) [@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies.
 
@@ -18,19 +18,33 @@ BMI is generally used as a proxy for adiposity as there are high correlations be
 Higher adiposity is a risk factor for certain non-communicable diseases. Such diseases include Type 2 Diabetes mellitus (T2D), musculoskeletal diseases, certain types of cancer and cardiovascular disease [@Garg2014; @Khan2018; @Kortt2002; @Bhaskaran2014]. Collectively, treatment for obesity-related diseases is costly for health services [@Dixon2019a; @Dixon2019]. Cardiovascular disease is one of the leading causes of death. Cardiovascular disease is a general term for diseases affecting the heart or circulatory system and can be subcategorised further into diseases such as coronary heart disease (CHD) and stroke. Obesity is associated with an increased risk of such cardiovascular events [@Khan2018]
 
 ## Mendelian randomisation can be used to explore causality
-Mendelian randomisation is a technique which uses the random assortment of alleles to estimate the causal association between a modifiable risk factor (such as BMI) and disease outcomes. It can be likened to a natural randomised control trial (RCT) [FIG]. Associations between BMI and disease have been shown through use of prospective observational studies [@Khan2018], but more recently, through use of Mendelian randomisation studies [@Nordestgaard2012; @Dale2017; @Carreras-Torres2017a].  
+Mendelian randomisation is a technique which uses the random assortment of alleles to estimate the causal association between a modifiable risk factor (such as BMI) and disease outcomes. It can be likened to a natural randomised control trial (RCT) [FIG]. Associations between BMI and disease have been shown through use of prospective observational studies [@Khan2018], but more recently, through use of Mendelian randomisation studies [@Nordestgaard2012; @Dale2017; @Carreras-Torres2017a]. These studies have provided evidence for a causal relationship between adiposity and ischaemic heart disease (IHD) [@Nordestgaard2012], coronary heart disease (CHD), T2D [@Dale2017] and types of cancer including pancreatic cancer [@Carreras-Torres2017a]. Studies have also found that weight loss improves cardiovascular risk factors [@Wing2011; other refs]. Despite the evidence for a causal association between adiposity and cardiovascular disease, mechanisms of obesity-related disease remain unclear.
 
-## Limitations of current epidemiological research
+## Mechanisms of obesity-related cardiovascular disease
+Obesity is caused by an increase in fat deposition and generally occurs when energy intake exceeds energy expenditure. There are two types of fat: white adipose tissue (WAT) and brown adipose tissue (BAT). WAT secretes proteins and peptides which have pro-inflammatory effects [@Cercato2019; @Kern2001]. Due to these adipose tissue effects, obesity results in a state of chronic low-grade inflammation [@Esser2014], with an increase in adipose tumour necrosis factor-alpha (TNF-alpha) and interleukin-6 (IL-6) [@Kern2001]. Efforts have been made to understand how adiposity causes cardiovascular disease, with suggestion that inflammation, increased production of reactive oxygen species and endothelial dysfunction contribute to increased cardiovascular risk [@Cercato2019, add other refs].
 
-## Mendelian randomization 
+## Plasma markers of obesity
+Studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, inlcuding low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL) [@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been expored in a causal framework. 
 
-## Basic science
+As the majority of druggable targets are proteins, it is also valuable to explore the effects of BMI on circulating plasma proteins. It is estimated that 25% of proteins in the human proteome circulate in the blood [@Imming2006], including enzymes, protein kinases and transport proteins. Therefore, focusing on effects of adiposity on the circulating proteome may allow for the development of or repurposing of therapeutic interventions to reduce obesity-related disease. Previous studies that have explored the effect of adiposity on the circulating proteome have used hypothesis driven approaches [ref]. Attempts to evaluate the effect of BMI on the general proteome have been performed using observational analyses [refs]. Recent technologies have been developed which allow protein detection in unprecedented scope and detail, for example the SOMAscan by SomaLogic [@Gold2012], which can detect over 3,500 unique proteins. Although identifying alterations of individual proteins may provide therapeutic opportunities, assessing the overall protein profile of adiposity may provide more of a mechanistic insight into how adiposity causes disease.
+
+
+## Platelets are key cells involved in thrombosis
+
 
 ## Importance of an interdisciplinary approach
 
 ## Thesis aims and objectives
+The aims of the thesis are
+
+1) 
 
 ## Thesis structure
+There will be xx results chapters in this thesis.
+1)
+2)
+3)
+4)
 
 ## Publications from the PhD (in preparation or published)
 
